added docker to pom
added java app to docker

--- a/cloud/clouddevops-capstone/Dockerfile
+++ b/cloud/clouddevops-capstone/Dockerfile
@@ -1,17 +1,9 @@
 # Start from a small base
-FROM scratch
-
-# Our application requires no privileges
-# so run it with a non-root user
-ADD users /etc/passwd
-USER nobody
-
-# Our application runs on port 8001
-# so allow hosts to bind to that port
-EXPOSE 8000
+FROM openjdk:8-jdk-alpine
 
 # Add our application binary
-ADD app /app
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
 
 # Run our application!
-ENTRYPOINT [ "/app" ]
+ENTRYPOINT ["java","-jar","/app.jar"]
